# TechArena-Volga-Challenge-2024

./: CMakeLists.txt  README.md  merge_list.txt  merger.py  submission.cpp  tests_generator.py
include/: block_dp.h  checker.h  edge.h  graph.h  includes.h  myrand.h  param_search.h  solver.h  util.h
src/: block_dp.cpp  checker.cpp  graph.cpp  main.cpp  param_search.cpp  solver.cpp  tester.cpp  util.cpp
